@startuml
'https://plantuml.com/class-diagram

 namespace com.cleanup.todoc {
    namespace Database {
      interface com.cleanup.todoc.Database.ProjectDao {
          {abstract} + creteProject()
          {abstract} + getProjects()
      }
    }
  }


  namespace com.cleanup.todoc {
    namespace Database {
      interface com.cleanup.todoc.Database.TaskDao {
          {abstract} + deleteTask()
          {abstract} + getTasks()
          {abstract} + insertTask()
          {abstract} + updateTask()
      }
    }
  }


  namespace com.cleanup.todoc {
    namespace Database {
      abstract class com.cleanup.todoc.Database.TodocDatabase {
          {static} + INSTANCE : TodocDatabase
          {static} + getInstance()
          {abstract} + projectDao()
          {abstract} + taskDao()
          {static} - prepopulateDatabase()
      }
    }
  }


  com.cleanup.todoc.Database.TodocDatabase -up-|> android.arch.persistence.room.RoomDatabase
 namespace com.cleanup.todoc {
    namespace model {
      class com.cleanup.todoc.model.Project {
          - color : int
          - id : long
          - name : String
          + Project()
          {static} + getAllProjects()
          + getColor()
          + getId()
          + getName()
          {static} + getProjectById()
          + toString()
      }
    }
  }


  namespace com.cleanup.todoc {
    namespace model {
      class com.cleanup.todoc.model.Task {
          - creationTimestamp : long
          - id : long
          - name : String
          - projectId : long
          + Task()
          + getCreationTimestamp()
          + getId()
          + getName()
          + getProject()
          + getProjectId()
          - setCreationTimestamp()
          - setId()
          - setName()
          - setProjectId()
      }
    }
  }


  namespace com.cleanup.todoc {
    namespace model {
      class com.cleanup.todoc.model.Task.TaskAZComparator {
          + compare()
      }
    }
  }


  namespace com.cleanup.todoc {
    namespace model {
      class com.cleanup.todoc.model.Task.TaskOldComparator {
          + compare()
      }
    }
  }


  namespace com.cleanup.todoc {
    namespace model {
      class com.cleanup.todoc.model.Task.TaskRecentComparator {
          + compare()
      }
    }
  }


  namespace com.cleanup.todoc {
    namespace model {
      class com.cleanup.todoc.model.Task.TaskZAComparator {
          + compare()
      }
    }
  }


  com.cleanup.todoc.model.Task +-down- com.cleanup.todoc.model.Task.TaskAZComparator
  com.cleanup.todoc.model.Task +-down- com.cleanup.todoc.model.Task.TaskOldComparator
  com.cleanup.todoc.model.Task +-down- com.cleanup.todoc.model.Task.TaskRecentComparator
  com.cleanup.todoc.model.Task +-down- com.cleanup.todoc.model.Task.TaskZAComparator
  com.cleanup.todoc.model.Task.TaskAZComparator .up.|> java.util.Comparator
  com.cleanup.todoc.model.Task.TaskOldComparator .up.|> java.util.Comparator
  com.cleanup.todoc.model.Task.TaskRecentComparator .up.|> java.util.Comparator
  com.cleanup.todoc.model.Task.TaskZAComparator .up.|> java.util.Comparator
 namespace com.cleanup.todoc {
    namespace injection {
      class com.cleanup.todoc.injection.Injection {
          {static} + provideExecutor()
          {static} + provideProjectDataSource()
          {static} + provideTaskDataSource()
          {static} + provideViewModelFactory()
      }
    }
  }


  namespace com.cleanup.todoc {
    namespace injection {
      class com.cleanup.todoc.injection.ViewModelFactory {
          - executor : Executor
          + ViewModelFactory()
          + create()
      }
    }
  }


  com.cleanup.todoc.injection.ViewModelFactory .up.|> android.arch.lifecycle.ViewModelProvider.Factory
  com.cleanup.todoc.injection.ViewModelFactory o-- com.cleanup.todoc.repositories.ProjectDataRepository : projectDataSource
  com.cleanup.todoc.injection.ViewModelFactory o-- com.cleanup.todoc.repositories.TaskDataRepository : taskDataSource
 namespace com.cleanup.todoc {
    namespace repositories {
      class com.cleanup.todoc.repositories.ProjectDataRepository {
          + ProjectDataRepository()
          + getProjects()
      }
    }
  }


  namespace com.cleanup.todoc {
    namespace repositories {
      class com.cleanup.todoc.repositories.TaskDataRepository {
          + TaskDataRepository()
          + createTask()
          + deleteTask()
          + getTasks()
          + updateTask()
      }
    }
  }


  com.cleanup.todoc.repositories.ProjectDataRepository o-- com.cleanup.todoc.Database.ProjectDao : projectDao
  com.cleanup.todoc.repositories.TaskDataRepository o-- com.cleanup.todoc.Database.TaskDao : taskDao

   namespace com.cleanup.todoc {
      namespace ui {
        class com.cleanup.todoc.ui.MainActivity {
            + dialog : AlertDialog
            - allExistProjects : Project[]
            - allProjects : List<Project>
            - dialogEditText : EditText
            - dialogSpinner : Spinner
            - lblNoTasks : TextView
            - listTasks : RecyclerView
            - tasks : ArrayList<Task>
            + onCreate()
            + onCreateOptionsMenu()
            + onDeleteTask()
            + onOptionsItemSelected()
            - configureViewModel()
            - getAddTaskDialog()
            - getProjects()
            - getTacks()
            - onPositiveButtonClick()
            - populateDialogSpinner()
            - showAddTaskDialog()
            - updateProject()
            - updateTacksList()
            - updateTasks()
        }
      }
    }


    namespace com.cleanup.todoc {
      namespace ui {
        enum SortMethod {
          ALPHABETICAL
          ALPHABETICAL_INVERTED
          NONE
          OLD_FIRST
          RECENT_FIRST
        }
      }
    }


    namespace com.cleanup.todoc {
      namespace ui {
        class com.cleanup.todoc.ui.TaskViewModel {
            - currentProject : LiveData<List<Project>>
            - executor : Executor
            + TaskViewModel()
            + createdTask()
            + deleteTask()
            + getProject()
            + getTasks()
            + init()
            + updateTask()
        }
      }
    }


    namespace com.cleanup.todoc {
      namespace ui {
        class com.cleanup.todoc.ui.TasksAdapter {
            - tasks : List<Task>
            + getItemCount()
            + onBindViewHolder()
            + onCreateViewHolder()
            ~ TasksAdapter()
            ~ updateTasks()
        }
      }
    }


    namespace com.cleanup.todoc {
      namespace ui {
        interface com.cleanup.todoc.ui.TasksAdapter.DeleteTaskListener {
            {abstract} + onDeleteTask()
        }
      }
    }


    namespace com.cleanup.todoc {
      namespace ui {
        class com.cleanup.todoc.ui.TasksAdapter.TaskViewHolder {
            - imgDelete : AppCompatImageView
            - imgProject : AppCompatImageView
            - lblProjectName : TextView
            - lblTaskName : TextView
            ~ TaskViewHolder()
            ~ bind()
        }
      }
    }


    com.cleanup.todoc.ui.MainActivity .up.|> com.cleanup.todoc.ui.TasksAdapter.DeleteTaskListener
    com.cleanup.todoc.ui.MainActivity -up-|> android.support.v7.app.AppCompatActivity
    com.cleanup.todoc.ui.MainActivity o-- com.cleanup.todoc.ui.TasksAdapter : adapter
    com.cleanup.todoc.ui.MainActivity o-- com.cleanup.todoc.ui.TaskViewModel : mTaskViewModel
    com.cleanup.todoc.ui.MainActivity o-- com.cleanup.todoc.ui.MainActivity.SortMethod : sortMethod
    com.cleanup.todoc.ui.MainActivity +-down- com.cleanup.todoc.ui.MainActivity.SortMethod
    com.cleanup.todoc.ui.TaskViewModel -up-|> android.arch.lifecycle.ViewModel
    com.cleanup.todoc.ui.TaskViewModel o-- com.cleanup.todoc.repositories.ProjectDataRepository : projectDataSource
    com.cleanup.todoc.ui.TaskViewModel o-- com.cleanup.todoc.repositories.TaskDataRepository : taskDataSource
    com.cleanup.todoc.ui.TasksAdapter -up-|> android.support.v7.widget.RecyclerView.Adapter
    com.cleanup.todoc.ui.TasksAdapter o-- com.cleanup.todoc.ui.TasksAdapter.DeleteTaskListener : deleteTaskListener
    com.cleanup.todoc.ui.TasksAdapter +-down- com.cleanup.todoc.ui.TasksAdapter.DeleteTaskListener
    com.cleanup.todoc.ui.TasksAdapter +-down- com.cleanup.todoc.ui.TasksAdapter.TaskViewHolder
    com.cleanup.todoc.ui.TasksAdapter.TaskViewHolder -up-|> android.support.v7.widget.RecyclerView.ViewHolder
    com.cleanup.todoc.ui.TasksAdapter.TaskViewHolder o-- com.cleanup.todoc.ui.TasksAdapter.DeleteTaskListener : deleteTaskListener




@enduml